--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Lorenzo Alencar Tomaz <lolo.tomaz@gmail.com>"]
 readme = "README.md"
+packages = [{ include = "lolograd", from = "." }]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
